# rust_basics

./: Cargo.toml
src/: main.rs
