[package]
name = "guessing_game"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# SemVer - any version >= 0.8.3 but below 0.9.0
# but will be locked to 0.8.3 in cargo.lock
# unless you run "cargo update"
rand = "0.8.3"
